# jarvis

./: .travis.yml  README.md  jarvis.cabal  stack.yaml
app/: Main.hs
src/: Jarvis.hs
src/Jarvis/: Idea.hs  Settings.hs
src/Jarvis/Hint/: All.hs  BadComparisonWithBoolean.hs  BadCovariantDefinitionOfEquals.hs  JavaSyntaxHelper.hs  ReturnInBothTryAndFinally.hs  Type.hs  UnconditionalIfStatement.hs
test/Jarvis/Hint/: BadComparisonWithBooleanSpec.hs  BadCovariantDefinitionOfEqualsSpec.hs  Helper.hs  ReturnInBothTryAndFinallySpec.hs  UnconditionalIfStatementSpec.hs
