name:                jarvis
version:             0.1.0.0
synopsis:            Jarvis gives suggestions on how to improve your Java code
description:         Please see README.md
homepage:            https://github.com/kseo/jarvis#readme
license:             BSD3
license-file:        LICENSE
author:              Kwang Yul Seo
maintainer:          kwangyul.seo@gmail.com
copyright:           2016 Kwang Yul Seo
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Jarvis
                       Jarvis.Hint.All
                       Jarvis.Hint.BadCovariantDefinitionOfEquals
                       Jarvis.Hint.Type
                       Jarvis.Idea
                       Jarvis.Settings
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.2.2 && < 1.3
                     , filepath >= 1.4 && < 1.5
                     , language-java >= 0.2.8 && < 0.3
                     , uniplate >= 1.6.12 && < 1.7
  default-language:    Haskell2010

executable jarvis
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jarvis
                     , optparse-applicative >= 0.12 && < 0.13
  default-language:    Haskell2010

test-suite jarvis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jarvis
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kseo/jarvis
